2012-05-10  David Gilbert <david.gilbert@object-refinery.com>

    * org/jfree/chart/renderer/xy/XYBarRenderer.java
    (findDomainBounds): call new method in super-class to take account of
    non-visible series,
    (findRangeBounds): likewise;
    * tests/org/jfree/chart/renderer/xy/junit/XYBarRendererTests.java
    (testFindDomainBounds2): new test;
    (testFindRangeBounds2): Likewise.

2012-03-11  Martin Hoeller <martin.hoeller@xss.co.at>

    Patch 3500621 by Simon Kaczor
    * org/jfree/chart/title/LegendTitle
    (sortOrder): New field,
    (getSortOrder): New method,
    (setSortOrder): Likewise,
    (fetchLgendItems): Updated to support new sort order,
    (equals): Likewise.
    * tests/org/jfree/chart/title/LegendTitle
    (testEquals): Adapted for new field.

2012-02-13  Martin Hoeller <martin.hoeller@xss.co.at>

    Bug 3425881/Patch 3450234 by Patrick Schlott/Christoph Schroeder,
    reviewed by Richard West
    * org/jfree/chart/rendered/xy/XYDifferenceRenderer
    (drawItemPass0): Fix problems with identical x-values.

2012-02-08  Martin Hoeller <martin.hoeller@xss.co.at>

    Bug 3484403:
    * org/jfree/chart/axis/DateAxis
    (refreshTicksHorizontal): Fix endless loop,
    (refreshTicksVertical): Likewise;

2012-02-08  Martin Hoeller <martin.hoeller@xss.co.at>

    Bug 3484408:
    * ant/build.xml: fixed maven-bundle task.

2012-01-08  David Gilbert <david.gilbert@object-refinery.com>

    * source/org/jfree/chart/plot/dial/StandardDialScale.java
    (angleToValue): Implemented and removed FIXME.

2012-01-08  David Gilbert <david.gilbert@object-refinery.com>

    Bug 3445507:
    * source/org/jfree/data/time/TimeSeriesCollection.java
    (getRangeBounds(boolean)): New method,
    (getRangeBounds(List, Range, boolean)): Fix combining of ranges.

2012-01-08  David Gilbert <david.gilbert@object-refinery.com>

    * source/org/jfree/data/Range.java
    (combineIgnoringNaN): New method.

2012-01-08  David Gilbert <david.gilbert@object-refinery.com>
